@@ -39,9 +39,16 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
 					<configuration>
-						<source>8</source> <!-- Java source version -->
-						<target>8</target> <!-- Java target version -->
-
+						<source>11</source> <!-- Your JDK version -->
+						<target>11</target>
+						<compilerArgs>
+							<arg>--add-opens</arg>
+							<arg>
+								jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+							<arg>--add-opens</arg>
+							<arg>
+								jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -49,6 +56,15 @@
 	</build>
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Your dependencies remain the same -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
